--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "http-mock",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/index.js",
   "bin": {
-    "http-mock": "./index.js"
+    "http-mock": "./src/index.js"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
