--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "http-mock",
-  "version": "1.0.0",
+  "name": "endpoint-imposter",
+  "version": "0.0.1",
   "description": "",
   "main": "src/index.js",
   "bin": {
-    "http-mock": "./src/index.js"
+    "endpoint-imposter": "./src/index.js"
   },
   "scripts": {
     "test": "jest --runInBand"
