--- a/package.json
+++ b/package.json
@@ -12,9 +12,10 @@
   "author": "Łukasz Makuch",
   "license": "MIT",
   "dependencies": {
+    "clear-module": "^4.1.1",
     "express": "^4.17.1",
-    "import-fresh": "^3.1.0",
     "minimist": "^1.2.0",
+    "ncp": "^2.0.0",
     "sift": "^8.5.0"
   },
   "devDependencies": {
